--- a/src/global.css
+++ b/src/global.css
@@ -64,3 +64,18 @@ button{
     margin:1.5rem;
     cursor:pointer;
 }
+.hero{
+    width:100%;
+    height:100vh;
+    background: rgb(30,71,96);
+    background: linear-gradient(0deg, rgba(30,71,96,1) 0%, rgba(55,191,191,1) 100%); 
+}
+.hero nav{
+    width:100vw;
+    background:#1E4760;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    box-shadow: 0rem 0rem .4rem black;
+}
